--- a/src/components/general/pairing/gridRow.astro
+++ b/src/components/general/pairing/gridRow.astro
@@ -70,7 +70,7 @@ let iterationBreaker = 0;
 let pInComplete = true
 do {
   await delay(1 + iterationBreaker*100).then(async () => {
-    pEvAnsRank = await Astro.locals.EvAnsBuff(pGeneral.general.name, Display.enum.primary, {
+    await Astro.locals.GeneralBuffs(pGeneral.general.name, Display.enum.primary, {
       special1: InvestmentLevel.special1,
       special2: InvestmentLevel.special2,
       special3: InvestmentLevel.special3,
@@ -80,6 +80,16 @@ do {
       dragon: InvestmentLevel.dragon,
       beast: InvestmentLevel.beast
     });
+    pEvAnsRank = pGeneral.computedBuffs.get(Astro.locals.InvestmentOptions2Key({
+      special1: InvestmentLevel.special1,
+      special2: InvestmentLevel.special2,
+      special3: InvestmentLevel.special3,
+      special4: InvestmentLevel.special4,
+      special5: InvestmentLevel.special5,
+      stars: InvestmentLevel.stars,
+      dragon: InvestmentLevel.dragon,
+      beast: InvestmentLevel.beast
+    }))?.EvAns ?? -6;
     if (DEBUG) {
       console.log(`${primary} status: ${pGeneral.status}`)
       console.log(`i ${iterationBreaker++}`)
@@ -95,7 +105,7 @@ iterationBreaker = 0;
 let sInComplete = true
 do {
   await delay(1 + iterationBreaker*100).then(async () => {
-    sEvAnsRank = await Astro.locals.EvAnsBuff(sGeneral.general.name, Display.enum.assistant, {
+    await Astro.locals.GeneralBuffs(sGeneral.general.name, Display.enum.assistant, {
       special1: InvestmentLevel.special1,
       special2: InvestmentLevel.special2,
       special3: InvestmentLevel.special3,
@@ -105,6 +115,16 @@ do {
       dragon: InvestmentLevel.dragon,
       beast: InvestmentLevel.beast
     });
+    sEvAnsRank = sGeneral.computedBuffs.get(Astro.locals.InvestmentOptions2Key({
+      special1: InvestmentLevel.special1,
+      special2: InvestmentLevel.special2,
+      special3: InvestmentLevel.special3,
+      special4: InvestmentLevel.special4,
+      special5: InvestmentLevel.special5,
+      stars: AscendingLevels.enum[0],
+      dragon: InvestmentLevel.dragon,
+      beast: InvestmentLevel.beast
+    }))?.EvAns ?? -6;
     if (DEBUG) {
       console.log(`${primary} status: ${sGeneral.status}`)
       console.log(`i ${iterationBreaker++}`)
