--- a/src/components/general/pairing/gridDisplay.astro
+++ b/src/components/general/pairing/gridDisplay.astro
@@ -3,7 +3,7 @@ export const prerender = false;
 
 import { z } from "astro:content";
 
-import { FixedWidthParser } from 'fixed-width-parser';
+import { FixedWidthParser } from "fixed-width-parser";
 
 import "@spectrum-css/vars/dist/spectrum-global.css";
 import "@spectrum-css/vars/dist/spectrum-medium.css";
@@ -12,8 +12,7 @@ import "@spectrum-css/table/dist/index.css";
 import "@spectrum-css/icon/dist/index.css";
 import "@spectrum-css/ui-icons/dist/medium/Arrow100.svg";
 
-import { delay } from 'nanodelay'
-
+import { delay } from "nanodelay";
 
 import {
   BuffParams,
@@ -28,11 +27,12 @@ import {
   qualityColor,
   AscendingLevels,
   type ExtendedGeneralType,
-Display,
-ExtendedGeneralStatus,
+  type ExtendedGeneralStatusType,
+  Display,
+  ExtendedGeneralStatus,
 } from "@schemas/index";
 
-import GridRow from './gridRow.astro';
+import GridRow from "./gridRow.astro";
 
 interface Props {
   name: string;
@@ -59,14 +59,178 @@ let sortPrimaryInput: boolean | sortDirectionType | null = false;
 let sortSecondaryInput: boolean | sortDirectionType | null = false;
 
 let sortPrimaryValue: sortDirectionType = sortDirectionOptions.enum.descending;
-let sortSecondaryValue: sortDirectionType = sortDirectionOptions.enum.descending;
+let sortSecondaryValue: sortDirectionType =
+  sortDirectionOptions.enum.descending;
 
 let sortEvAnsRankInput: boolean | sortDirectionType | null = false;
-let sortEvAnsRankValue: sortDirectionType = sortDirectionOptions.enum.descending;
+let sortEvAnsRankValue: sortDirectionType =
+  sortDirectionOptions.enum.descending;
+
+if (DEBUG) {
+  console.log(`# locals Generals: ${Astro.locals.ExtendedGeneralMap.size}`);
+}
+
+const pairs = Array<GeneralPairType>();
+
+if (Astro.locals.ExtendedGeneralMap.size > 0) {
+  for await (const eg1 of Astro.locals.ExtendedGeneralMap.values()) {
+    if (eg1 === undefined || eg1 === null) {
+      continue;
+    } else if (eg1.general === undefined || eg1.general === null) {
+      continue;
+    }
+    if (DEBUG) console.log(`eg1 is ${eg1.general.name}`);
+    const pairsData = new Array<GeneralPairType>();
+
+    const pairUrl = new URL(
+      `/generalPairs/${eg1.general.name}-${eg1.general.score_as}.json`,
+      Astro.url
+    );
+
+    if (DEBUG) {
+      console.log(`about to fetch ${pairUrl}`);
+    }
+    const response = await fetch(pairUrl);
+    if (response !== null && response.ok) {
+      const jr: Array<GeneralPairType> = await response.json();
+      const jrv = z.array(GeneralPair).safeParse(jr);
+      if (jrv.success) {
+        pairsData.push(...jrv.data);
+      } else {
+        console.log(`pair type validation failed: ${jrv.error.message}`);
+        console.log(JSON.stringify(jr));
+      }
+    } else {
+      console.log(`responce for ${pairUrl.toString()} was not ok`);
+    }
+
+    if (pairsData.length > 0) {
+      if (DEBUG) {
+        console.log(`pairsdata: ${pairsData.length}`);
+      }
+      pairsData.forEach((pi) => {
+        pairs.push(pi);
+      });
+    }
+  }
+}
+
+const sortPairsByPrimary = (a: GeneralPairType, b: GeneralPairType): number => {
+  return a.primary.localeCompare(b.primary, undefined, { sensitivity: "base" });
+};
+
+const sortPairsBySecondary = (
+  a: GeneralPairType,
+  b: GeneralPairType
+): number => {
+  return a.secondary.localeCompare(b.secondary, undefined, {
+    sensitivity: "base",
+  });
+};
+
+const sortPairsByEvAnsRank = (
+  a: GeneralPairType,
+  b: GeneralPairType
+): number => {
+  const Aprimary: ExtendedGeneralType = Astro.locals.ExtendedGeneralMap.get(
+    a.primary
+  );
+  const Asecondary: ExtendedGeneralType = Astro.locals.ExtendedGeneralMap.get(
+    a.secondary
+  );
+  const Bprimary: ExtendedGeneralType = Astro.locals.ExtendedGeneralMap.get(
+    b.primary
+  );
+  const Bsecondary: ExtendedGeneralType = Astro.locals.ExtendedGeneralMap.get(
+    b.secondary
+  );
+
+  const apr =
+    Aprimary.computedBuffs.get(
+      Astro.locals.InvestmentOptions2Key(InvestmentLevel)
+    )?.EvAns ?? -1;
+  const asr =
+    Asecondary.computedBuffs.get(
+      Astro.locals.InvestmentOptions2Key(InvestmentLevel)
+    )?.EvAns ?? -2;
+
+  const bpr =
+    Bprimary.computedBuffs.get(
+      Astro.locals.InvestmentOptions2Key(InvestmentLevel)
+    )?.EvAns ?? -3;
+  const bsr =
+    Bsecondary.computedBuffs.get(
+      Astro.locals.InvestmentOptions2Key(InvestmentLevel)
+    )?.EvAns ?? -4;
+
+  const apt = apr + asr;
+  const bpt = bpr + bsr;
+  if (DEBUG) {
+    console.log(
+      `a.primary computed buffs: ${JSON.stringify(Array.from(Aprimary.computedBuffs))}`
+    );
+    console.log(
+      `a.primary: ${a.primary}: ${apr}\ta.secondary: ${a.secondary}: ${asr}\ta: ${apt}`
+    );
+    console.log(
+      `b.primary: ${b.primary}: ${bpr}\tb.secondary: ${b.secondary}: ${bsr}\tb: ${bpt}`
+    );
+  }
+  if (apt === bpt) {
+    return 0;
+  } else if (apt < bpt) {
+    return -1;
+  } else {
+    return 1;
+  }
+};
+
+const sortPairSelector: Record<
+  sortByOptionsType,
+  (a: GeneralPairType, b: GeneralPairType) => number
+> = {
+  [sortByOptions.enum.primary]: sortPairsByPrimary,
+  [sortByOptions.enum.secondary]: sortPairsBySecondary,
+  [sortByOptions.enum.EvAnsRank]: sortPairsByEvAnsRank,
+};
+
+const sortPairFunction = (a: GeneralPairType, b: GeneralPairType) => {
+  if (a === undefined) {
+    if (b === undefined) {
+      return 0;
+    } else {
+      return 1;
+    }
+  } else if (b === undefined) {
+    return -1;
+  } else {
+    if (!sortDirection.localeCompare(sortDirectionOptions.enum.descending)) {
+      return sortPairSelector[sortBy](a, b);
+    } else {
+      return sortPairSelector[sortBy](b, a);
+    }
+  }
+};
 
 if (Astro.request.method === "POST") {
   try {
     if (DEBUG) console.log(`executing POST try block`);
+    let continuePostLoop = true;
+    await Promise.all([
+        ...Astro.locals.ExtendedGeneralMap.values(),
+      ].map(async (g: ExtendedGeneralType) => {
+        if (DEBUG) {
+          console.log(`${g.general.name}: ${g.status}`);
+        }
+        let iterationCount = 0;
+        while(g.status.localeCompare(ExtendedGeneralStatus.enum.complete)) {
+          await delay(10 * ++iterationCount).then((iterationCount) => {
+            if(DEBUG) {
+              console.log(`${g.general.name} status ${g.status}`)
+            }
+          })
+        }
+     }))
     const data = await Astro.request.formData();
     if (sortPrimaryInput === false) {
       //not prievously sorted by primary
@@ -105,18 +269,19 @@ if (Astro.request.method === "POST") {
           sortSecondaryValue = sortDirectionOptions.enum.ascending;
         }
       }
-      if(sortEvAnsRankInput === false) {
+      if (sortEvAnsRankInput === false) {
         //not previously sorted by EvAnsRank
         const v = sortDirectionOptions.safeParse(data.get("EvAnsRank"));
         if (v.success) {
-          
-          if(DEBUG) { console.log(`sortEvAnsRankInput was false, is now ${v.data}`)}
+          if (DEBUG) {
+            console.log(`sortEvAnsRankInput was false, is now ${v.data}`);
+          }
           sortEvAnsRankInput = true;
           sortPrimaryInput = false;
           sortSecondaryInput = false;
           sortBy = sortByOptions.enum.EvAnsRank;
           sortDirection = v.data;
-          if(sortDirection === sortDirectionOptions.enum.ascending) {
+          if (sortDirection === sortDirectionOptions.enum.ascending) {
             sortEvAnsRankValue = sortDirectionOptions.enum.descending;
           } else {
             sortEvAnsRankValue = sortDirectionOptions.enum.ascending;
@@ -125,7 +290,9 @@ if (Astro.request.method === "POST") {
       }
     } else {
       if (DEBUG)
-        console.log(`values are ${sortPrimaryInput}  ${sortSecondaryInput} ${sortEvAnsRankInput}`);
+        console.log(
+          `values are ${sortPrimaryInput}  ${sortSecondaryInput} ${sortEvAnsRankInput}`
+        );
     }
   } catch (error) {
     if (DEBUG) console.log(`executing POST catch block`);
@@ -136,123 +303,7 @@ if (Astro.request.method === "POST") {
   }
 }
 
-
-
-
-if (DEBUG) {
-  console.log(`# locals Generals: ${Astro.locals.ExtendedGeneralMap.size}`);
-  
-}
-  
-const pairs = Array<GeneralPairType>();
-
-if (Astro.locals.ExtendedGeneralMap.size > 0) {
-  for await (const eg1 of Astro.locals.ExtendedGeneralMap.values()) {
-    if(eg1 === undefined || eg1 === null) {
-      continue;
-    } else if (eg1.general === undefined || eg1.general === null ) {
-      continue;
-    }
-    if(DEBUG) console.log(`eg1 is ${eg1.general.name}`)
-    const pairsData = new Array<GeneralPairType>();
-    
-    const pairUrl = new URL(
-      `/generalPairs/${eg1.general.name}-${eg1.general.score_as}.json`,
-      Astro.url
-    );
-    
-    if(DEBUG) {console.log(`about to fetch ${pairUrl}`)}
-    const response = await fetch(pairUrl);
-    if (response !== null && response.ok) {
-      const jr: Array<GeneralPairType> = await response.json();
-        const jrv = z.array(GeneralPair).safeParse(jr);
-        if(jrv.success) {
-          pairsData.push(...jrv.data)
-        } else {
-          console.log(`pair type validation failed: ${jrv.error.message}`)
-          console.log(JSON.stringify(jr))
-        }
-    } else {
-      console.log(`responce for ${pairUrl.toString()} was not ok`)
-    }
-
-    if(pairsData.length > 0) {
-      if(DEBUG) {
-        console.log(`pairsdata: ${pairsData.length}`)
-      }
-      pairsData.forEach((pi) => {
-        pairs.push(pi);
-      })
-    }
-  };
-}
-
-const sortPairsByPrimary = (a:GeneralPairType, b:GeneralPairType): number => {
-  return (a.primary.localeCompare(b.primary, undefined, {sensitivity: 'base'}))
-}
-
-const sortPairsBySecondary = (a:GeneralPairType, b:GeneralPairType): number => {
-  return (a.secondary.localeCompare(b.secondary, undefined, {sensitivity: 'base'}))
-}
-
-const sortPairsByEvAnsRank = (a:GeneralPairType, b:GeneralPairType): number => {
-  const Aprimary: ExtendedGeneralType = Astro.locals.ExtendedGeneralMap.get(a.primary);
-  const Asecondary: ExtendedGeneralType = Astro.locals.ExtendedGeneralMap.get(a.secondary);
-  const Bprimary: ExtendedGeneralType = Astro.locals.ExtendedGeneralMap.get(b.primary);
-  const Bsecondary: ExtendedGeneralType = Astro.locals.ExtendedGeneralMap.get(b.secondary);
-
-  const apr = Aprimary.computedBuffs.get(Astro.locals.InvestmentOptions2Key(InvestmentLevel))?.EvAns ?? -1;
-  const asr = Asecondary.computedBuffs.get(Astro.locals.InvestmentOptions2Key(InvestmentLevel))?.EvAns ?? -2
-
-  const bpr = Bprimary.computedBuffs.get(Astro.locals.InvestmentOptions2Key(InvestmentLevel))?.EvAns ?? -3
-  const bsr = Bsecondary.computedBuffs.get(Astro.locals.InvestmentOptions2Key(InvestmentLevel))?.EvAns ?? -4
-  
-  const apt = (apr + asr)
-  const bpt = (bpr + bsr)
-  if(DEBUG) {
-    console.log(`a.primary computed buffs: ${JSON.stringify(Array.from(Aprimary.computedBuffs))}`)
-    console.log(`a.primary: ${a.primary}: ${apr}\ta.secondary: ${a.secondary}: ${asr}\ta: ${apt}`)
-    console.log(`b.primary: ${b.primary}: ${bpr}\tb.secondary: ${b.secondary}: ${bsr}\tb: ${bpt}`)
-  }
-  if(apt === bpt) {
-    return 0
-  } else if (apt < bpt) {
-    return -1
-  } else {
-    return 1
-  }
-}
-
-const sortPairSelector: Record<sortByOptionsType, (a:GeneralPairType, b:GeneralPairType) => number > = {
-  [sortByOptions.enum.primary]: sortPairsByPrimary,
-  [sortByOptions.enum.secondary]: sortPairsBySecondary,
-  [sortByOptions.enum.EvAnsRank]: sortPairsByEvAnsRank,
-}
-
-const sortPairFunction = (a:GeneralPairType, b:GeneralPairType) => {
-  if(DEBUG) {
-    console.log(`sortBy: ${sortBy}`)
-  }
-  if(a === undefined) {
-    if(b === undefined) {
-      return 0;
-    } else {
-      return 1;
-    }
-  } else if (b === undefined) {
-    return -1
-  } else {
-    if(!sortDirection.localeCompare(sortDirectionOptions.enum.descending)) {
-      return sortPairSelector[sortBy](a, b);
-    } else {
-      return sortPairSelector[sortBy](b, a);
-    }
-  }
-}
-
 let pairArray = [...pairs].sort(sortPairFunction);
-
-
 ---
 
 <div class="spectrum spectrum--medium">
@@ -306,16 +357,14 @@ let pairArray = [...pairs].sort(sortPairFunction);
         <div class="spectrum-Table-body" role="rowgroup">
           {
             pairArray.length > 0 &&
-            pairArray.map(
-                (pi, index) => (
-                  <GridRow
-                    index={index}
-                    primary={pi.primary} 
-                    secondary={pi.secondary} 
-                    InvestmentLevel={InvestmentLevel}
-                  ></GridRow>
-                )
-              )
+              pairArray.map((pi, index) => (
+                <GridRow
+                  index={index}
+                  primary={pi.primary}
+                  secondary={pi.secondary}
+                  InvestmentLevel={InvestmentLevel}
+                />
+              ))
           }
         </div>
       </div>
