disable all the debugging I can remember

--- a/src/components/general/pairing/gridDisplay.astro
+++ b/src/components/general/pairing/gridDisplay.astro
@@ -40,7 +40,7 @@ interface Props {
   class?: string;
 }
 
-const DEBUG = true;
+const DEBUG = false;
 
 const { name, InvestmentLevel } = Astro.props;
 
