--- a/src/components/general/pairing/gridRow.astro
+++ b/src/components/general/pairing/gridRow.astro
@@ -1,10 +1,6 @@
 ---
 export const prerender = false;
 
-import { z } from "astro:content";
-
-import { FixedWidthParser } from 'fixed-width-parser';
-
 import "@spectrum-css/vars/dist/spectrum-global.css";
 import "@spectrum-css/vars/dist/spectrum-medium.css";
 import "@spectrum-css/page/dist/index.css";
@@ -16,22 +12,12 @@ import { delay } from 'nanodelay'
 
 
 import {
-  BuffParams,
   type BuffParamsType,
-  ExtendedGeneral,
-  GeneralElement,
-  type GeneralElementType,
-  GeneralPair,
-  type GeneralPairType,
-  GeneralClass,
-  generalUseCase,
-  qualityColor,
   AscendingLevels,
   type ExtendedGeneralType,
   Display,
   ExtendedGeneralStatus,
-  dragon,
-} from "@schemas/index";
+  } from "@schemas/index";
 
 
 interface Props {
@@ -49,28 +35,31 @@ const { index, primary, secondary, InvestmentLevel } = Astro.props;
 
 const pGeneral: ExtendedGeneralType = Astro.locals.ExtendedGeneralMap.get(primary) ;
 const sGeneral: ExtendedGeneralType = Astro.locals.ExtendedGeneralMap.get(secondary);
+
 interface DisplayPair {
   primary: ExtendedGeneralType,
   secondary: ExtendedGeneralType,
   EvAnsRanking: number,
 }
+
 const pair: DisplayPair = {
   primary: pGeneral,
   secondary: sGeneral,
   EvAnsRanking: 0,
 }
+
 if(pGeneral === undefined || sGeneral === undefined) {
   console.log(`major problem in gridRow for ${primary} ${secondary}`)
   return;
 }
 
-
 let pEvAnsRank = -9;
 let iterationBreaker = 0;
 let pInComplete = true
+
 do {
-  await delay(1 + iterationBreaker*100).then(async () => {
-    await Astro.locals.GeneralBuffs(pGeneral.general.name, Display.enum.primary, {
+  await delay(1 + iterationBreaker*100).then(() => {
+    Astro.locals.GeneralBuffs(pGeneral.general.name, Display.enum.primary, {
       special1: InvestmentLevel.special1,
       special2: InvestmentLevel.special2,
       special3: InvestmentLevel.special3,
@@ -104,8 +93,8 @@ let sEvAnsRank = -9;
 iterationBreaker = 0;
 let sInComplete = true
 do {
-  await delay(1 + iterationBreaker*100).then(async () => {
-    await Astro.locals.GeneralBuffs(sGeneral.general.name, Display.enum.assistant, {
+  await delay(1 + iterationBreaker*100).then(() => {
+    Astro.locals.GeneralBuffs(sGeneral.general.name, Display.enum.assistant, {
       special1: InvestmentLevel.special1,
       special2: InvestmentLevel.special2,
       special3: InvestmentLevel.special3,
