--- a/src/components/general/pairing/AttackPairs.astro
+++ b/src/components/general/pairing/AttackPairs.astro
@@ -1,27 +1,51 @@
 ---
+export const prerender = false;
 
-import { getCollection, type CollectionEntry } from "astro:content";
+import { getCollection, type CollectionEntry, z } from "astro:content";
 import type { ComponentProps } from "astro/types";
 
-import { type ZodError } from "zod";
 import { ulid } from "ulidx";
+
 import GridDisplay from "./gridDisplay.astro";
 type GridDisplayProps = ComponentProps<typeof GridDisplay>;
 
 import {
+  AscendingLevels,
   GeneralArray,
   type GeneralArrayType,
   GeneralElement,
   type GeneralElementType,
   ClassEnum,
+  qualityColor,
+  type BuffParamsType,
+type ClassEnumType,
 } from "@schemas/index";
 
 const DEBUG = false;
+
+interface Props {
+  generalClass: ClassEnumType
+}
+
+const {generalClass} = Astro.props;
 
 const table_name = `${Astro.url.pathname}-${ulid()}`
 
 let allGeneralsJson = "";
 let allGenerals = new Array<GeneralElementType>();
+let generalsPromise = false;
+
+//while no general can *have* both, I can evaluate generals assuming I will give them whichever that particular one needs.
+let MyInvestmentLevel: BuffParamsType = {
+  special1: qualityColor.enum.Gold,
+  special2: qualityColor.enum.Gold,
+  special3: qualityColor.enum.Gold,
+  special4: qualityColor.enum.Gold,
+  special5: qualityColor.enum.Disabled,
+  stars: AscendingLevels.enum[10],
+  dragon: true,
+  beast: true,
+};
 
 const generalObjects: CollectionEntry<"generals">[] =
   await getCollection("generals");
@@ -32,7 +56,7 @@ if (generalObjects !== null && generalObjects !== undefined) {
   for (const v of generalIterator) {
     const validation = GeneralElement.safeParse(v.data);
     if (validation.success) {
-      if (validation.data.general.score_as === ClassEnum.enum.Mounted) {
+      if (validation.data.general.score_as === generalClass) {
         allGenerals.push(validation.data);
       }
     } else {
@@ -40,11 +64,22 @@ if (generalObjects !== null && generalObjects !== undefined) {
     }
   }
   allGeneralsJson = JSON.stringify(allGenerals);
+  allGenerals.map(async (g) => {
+    if (DEBUG) console.log(`adding ${g.general.name}`)
+    Astro.locals.addEG2EGS(g.general);
+    
+    await Astro.locals.enrichGeneral(g.general.name)
+    .then(() => {
+      if(DEBUG) {
+        console.log(`${g.general.name} finished enriching function`)
+      }
+    });
+  });
 }
 
 let aresult:
   | { success: true; data: GeneralArrayType }
-  | { success: false; error: ZodError } = GeneralArray.safeParse(
+  | { success: false; error: z.ZodError } = GeneralArray.safeParse(
   JSON.parse(allGeneralsJson)
 );
 if (aresult.success ) {
@@ -61,8 +96,7 @@ if (aresult.success ) {
 <div class="table-container">
   <GridDisplay 
     name={table_name} 
-    allGenerals={allGenerals} 
-    
+    InvestmentLevel={MyInvestmentLevel}
   ></GridDisplay>
 </div>
 
