--- a/src/components/general/pairing/gridRow.astro
+++ b/src/components/general/pairing/gridRow.astro
@@ -40,12 +40,14 @@ interface DisplayPair {
   primary: ExtendedGeneralType,
   secondary: ExtendedGeneralType,
   EvAnsRanking: number,
+  AttackRanking: number,
 }
 
 const pair: DisplayPair = {
   primary: pGeneral,
   secondary: sGeneral,
   EvAnsRanking: 0,
+  AttackRanking: 0,
 }
 
 if(pGeneral === undefined || sGeneral === undefined) {
@@ -54,6 +56,7 @@ if(pGeneral === undefined || sGeneral === undefined) {
 }
 
 let pEvAnsRank = -9;
+let pAttackRanking = -9;
 let iterationBreaker = 0;
 let pInComplete = true
 
@@ -79,6 +82,16 @@ do {
       dragon: InvestmentLevel.dragon,
       beast: InvestmentLevel.beast
     }))?.EvAns ?? -6;
+    pAttackRanking = pGeneral.computedBuffs.get(Astro.locals.InvestmentOptions2Key({
+      special1: InvestmentLevel.special1,
+      special2: InvestmentLevel.special2,
+      special3: InvestmentLevel.special3,
+      special4: InvestmentLevel.special4,
+      special5: InvestmentLevel.special5,
+      stars: InvestmentLevel.stars,
+      dragon: InvestmentLevel.dragon,
+      beast: InvestmentLevel.beast
+    }))?.AttackRank ?? -9.1;
     if (DEBUG) {
       console.log(`${primary} status: ${pGeneral.status}`)
       console.log(`i ${iterationBreaker++}`)
@@ -90,6 +103,7 @@ do {
 }while(pInComplete && iterationBreaker < iterationLimit )
 
 let sEvAnsRank = -9;
+let sAttackRanking = -9;
 iterationBreaker = 0;
 let sInComplete = true
 do {
@@ -114,6 +128,16 @@ do {
       dragon: InvestmentLevel.dragon,
       beast: InvestmentLevel.beast
     }))?.EvAns ?? -6;
+    sAttackRanking = sGeneral.computedBuffs.get(Astro.locals.InvestmentOptions2Key({
+      special1: InvestmentLevel.special1,
+      special2: InvestmentLevel.special2,
+      special3: InvestmentLevel.special3,
+      special4: InvestmentLevel.special4,
+      special5: InvestmentLevel.special5,
+      stars: AscendingLevels.enum[0],
+      dragon: InvestmentLevel.dragon,
+      beast: InvestmentLevel.beast
+    }))?.AttackRank ?? -9.1;
     if (DEBUG) {
       console.log(`${primary} status: ${sGeneral.status}`)
       console.log(`i ${iterationBreaker++}`)
@@ -128,6 +152,12 @@ pair.EvAnsRanking = pEvAnsRank + sEvAnsRank;
 if(DEBUG ) {
   console.log(`pair ${primary} ${secondary} EvAnsRanking is ${pair.EvAnsRanking}`)
 }
+
+pair.AttackRanking = pAttackRanking + sAttackRanking;
+if(DEBUG) {
+  console.log(`pair ${primary} ${secondary} Attack: ${pair.AttackRanking}`)
+}
+
 ---
 
 <div class="spectrum-Table-row" role="rowgroup">
@@ -142,5 +172,8 @@ if(DEBUG ) {
   </div>
   <div class="spectrum-Table-cell" role="cell">
     {pair.EvAnsRanking}
+  </div>
+  <div class="spectrum-Table-cell" role="cell">
+    {pair.AttackRanking}
   </div>
 </div>
