--- a/src/components/General.astro
+++ b/src/components/General.astro
@@ -135,8 +135,8 @@ if (dataV.success) {
   let iterationBreaker = 0;
   while (
     iterationBreaker < 60 &&
-    ( Astro.locals.ExtendedGeneralMap === undefined ||
-      Astro.locals.ExtendedGeneralMap.size === 0
+    ( Astro.locals.ExtendedGenerals === undefined ||
+      Astro.locals.ExtendedGenerals.length === 0
     )
   ) {
     console.log(
@@ -145,7 +145,9 @@ if (dataV.success) {
     delay(60 * iterationBreaker++ );
   }
 
-  Egeneral = Astro.locals.ExtendedGeneralMap.get(pageGE.general.name);
+  Egeneral = Astro.locals.ExtendedGenerals.find((element) => {
+    return !pageGE.general.name.localeCompare(element.general.name)
+  })
   
   iterationBreaker = 0;
   await Astro.locals.enrichGeneral(Egeneral.general.name);
