--- a/src/components/general/pairing/AttackPairs.astro
+++ b/src/components/general/pairing/AttackPairs.astro
@@ -68,16 +68,10 @@ if (generalObjects !== null && generalObjects !== undefined) {
     }
   }
   allGeneralsJson = JSON.stringify(allGenerals);
-  allGenerals.map(async (g) => {
+  allGenerals.map((g) => {
     if (DEBUG) console.log(`adding ${g.general.name}`)
     Astro.locals.addEG2EGS(g.general);
     
-    await Astro.locals.enrichGeneral(g.general.name)
-    .then(() => {
-      if(DEBUG) {
-        console.log(`${g.general.name} finished enriching function`)
-      }
-    });
   });
 }
 
