disable debugging for performance

--- a/src/components/general/pairing/gridDisplay.astro
+++ b/src/components/general/pairing/gridDisplay.astro
@@ -32,7 +32,7 @@ interface Props {
   class?: string;
 }
 
-const DEBUG = true;
+const DEBUG = false;
 
 const { name, InvestmentLevel } = Astro.props;
 
