--- a/src/components/general/pairing/gridRow.astro
+++ b/src/components/general/pairing/gridRow.astro
@@ -36,12 +36,14 @@ interface DisplayPair {
   secondary: ExtendedGeneralType;
   EvAnsRanking: number;
   AttackRanking: number;
+  DefenseRanking: number;
 }
 
 let pEvAnsRank = -9;
 let pAttackRanking = -9;
+let pDefenseRanking = -9;
+
 let iterationBreaker = 0;
-let pInComplete = true;
 
 const pGeneral: ExtendedGeneralType = Astro.locals.ExtendedGenerals.find(
   (element) => {
@@ -68,6 +70,7 @@ const pair: DisplayPair = {
   secondary: sGeneral,
   EvAnsRanking: 0,
   AttackRanking: 0,
+  DefenseRanking: 0,
 };
 
 iterationBreaker = 0;
@@ -107,10 +110,25 @@ pAttackRanking =
     })
   )?.AttackRank ?? -6;
 
+pDefenseRanking =
+  pGeneral.computedBuffs.get(
+    Astro.locals.InvestmentOptions2Key({
+      special1: InvestmentLevel.special1,
+      special2: InvestmentLevel.special2,
+      special3: InvestmentLevel.special3,
+      special4: InvestmentLevel.special4,
+      special5: InvestmentLevel.special5,
+      stars: InvestmentLevel.stars,
+      dragon: InvestmentLevel.dragon,
+      beast: InvestmentLevel.beast,
+    })
+  )?.DefenseRank ?? -6;
+
 let sEvAnsRank = -9;
 let sAttackRanking = -9;
+let sDefenseRanking = -9;
+
 iterationBreaker = 0;
-let sInComplete = true;
 
 iterationBreaker = 0;
 while (ExtendedGeneralStatus.enum.complete.localeCompare(sGeneral.status)) {
@@ -149,6 +167,20 @@ sAttackRanking =
     })
   )?.AttackRank ?? -6;
 
+sDefenseRanking =
+  sGeneral.computedBuffs.get(
+    Astro.locals.InvestmentOptions2Key({
+      special1: InvestmentLevel.special1,
+      special2: InvestmentLevel.special2,
+      special3: InvestmentLevel.special3,
+      special4: InvestmentLevel.special4,
+      special5: InvestmentLevel.special5,
+      stars: AscendingLevels.enum[0],
+      dragon: InvestmentLevel.dragon,
+      beast: InvestmentLevel.beast,
+    })
+  )?.AttackRank ?? -6;
+
 pair.EvAnsRanking = pEvAnsRank + sEvAnsRank;
 if (DEBUG) {
   console.log(
@@ -157,9 +189,13 @@ if (DEBUG) {
 }
 
 pair.AttackRanking = pAttackRanking + sAttackRanking;
+pair.DefenseRanking = pDefenseRanking + sDefenseRanking;
 if (DEBUG) {
-  console.log(`pair ${primary} ${secondary} Attack: ${pair.AttackRanking}`);
+  console.log(`pair ${primary} ${secondary} Attack: ${pair.AttackRanking} Defense: ${pair.DefenseRanking}`);
 }
+
+
+
 ---
 
 <div class="spectrum-Table-row" role="rowgroup">
@@ -177,5 +213,8 @@ if (DEBUG) {
   </div>
   <div class="spectrum-Table-cell" role="cell">
     {pair.AttackRanking}
+  </div>
+  <div class="spectrum-Table-cell" role="cell">
+    {pair.DefenseRanking}
   </div>
 </div>
